Added begin of spigot / bungee api